--- a/03-playbook.yaml
+++ b/03-playbook.yaml
@@ -2,6 +2,7 @@
 
     - name: install and run nginx
       hosts: web
+      become: yes
       tasks:
       - name: install nginx
         ansible.builtin.package:
