--- a/03-playbook.yaml
+++ b/03-playbook.yaml
@@ -9,4 +9,9 @@
          name: nginx
          state: present
 
+      - name: start nginx
+        ansible.builtin.service:
+          name: nginx
+          state: started
+          enabled: yes
 
