--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -4,7 +4,7 @@
   vars:
    COURSE: "DevOps with AWS"
    DURATION: "140HRS"
-   TRSINER: "Siva"
+   TRAINER: "Siva"
   tasks:
   - name: print variables
     ansible.builtin.debug:
