--- a/06-vars.yaml
+++ b/06-vars.yaml
@@ -1,12 +1,13 @@
-- name: play level variables
-  hosts: local
-  conenction: local
-  vars_files:
-    - course.yaml
-  tasks:
-  - name: print variables
-    vars:
-     COURSE: Ansible
-    ansible.builtin.debug:
+
+ - name: play level variables
+   hosts: local
+   connection: local
+   var_files:
+   - course.yaml
+   tasks:
+   - name: print variables
+     vars:
+     COURSE: ansible
+     ansible.builtin.debug:
      msg: "Course is {{ COURSE }}, Trainer is: {{ TRAINER }}"
 
