--- a/06-vars.yaml
+++ b/06-vars.yaml
@@ -2,7 +2,7 @@
  - name: play level variables
    hosts: local
    connection: local
-   var_files:
+   vars_files:
    - course.yaml
    tasks:
    - name: print variables
