--- a/09-vars.yaml
+++ b/09-vars.yaml
@@ -3,5 +3,5 @@
   connection: local
   tasks:
   - name: print variables from args
-     ansible.builin.debug:
+     ansible.builtin.debug:
        msg: "Hi {{ NAME }}, Good Morning"
