--- a/10-vqrs-preference.yaml
+++ b/10-vqrs-preference.yaml
@@ -1,8 +1,8 @@
 - name: variable preference
   hosts: local
   connection: local
-  vars:
-    NAME: "Ansible from PLAY"
+  # vars:
+  #   NAME: "Ansible from PLAY"
   # vars_files:
   # - course.yaml
   # vars_prompt:
@@ -20,4 +20,4 @@
   # 2. Task
   # 3. File
   # 4. prompt
-  # 5. 
+  # 5. play
