--- a/11-data-types.yaml
+++ b/11-data-types.yaml
@@ -17,7 +17,7 @@
     ansible.builtin.debug:
      msg: |
        Program: {{ PROGRAM }}
-       Duration: {{ DURAION }}
+       Duration: {{ DURATION }}
        Is Live?: {{ IS_LIVE }}
        Details: {{ DETAILS }}
        Topics: {{ TOPICS }}
