--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    IS_LIVE: ture
+    IS_LIVE: false
   tasks:
   - name: check Live or not
     ansible.builtin.debug:
