--- a/15-variables.yaml
+++ b/15-variables.yaml
@@ -15,6 +15,6 @@
     ansible.builtin.shell: ls-ltr > files.txt
     register: files_output
 
-  - name: print output
+  - name: print output of files
     ansible:builtin.debug:
       msg: "{{ users_output }}"
