--- a/15-variables.yaml
+++ b/15-variables.yaml
@@ -16,5 +16,5 @@
     register: files_output
 
   - name: print output of files
-    ansible:builtin.debug:
+    ansible.builtin.debug:
       msg: "{{ users_output }}"
