--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -4,4 +4,4 @@
   tasks:
   - name: greeting
     ansible.builtin.debug:
-      msg: "Hi Priya, {{ GREETING }}"
+      msg: "Hi Priya, {{ GREETING | default(Good Morning) }}"
