--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -3,10 +3,21 @@
   connection: local
   vars:
     topics: linux, shell, ansible, terraform
-    tagsList:
+    tagsMap:
       name: ansible
       project: roboshop
       component: catalogue
+    tagsList: [
+        {
+             "key": "name",
+             "value": "ansible"
+        },
+        {
+              
+              "key": "project"
+              "value": "roboshop"
+        }
+    ]
 
   tasks:
   - name: greeting
@@ -19,4 +30,8 @@
 
   - name: convert map to list
     ansible.builtin.debug:
-      msg: "{{ tagsList | dict2items }}"
+      msg: "{{ tagsMap | dict2items }}"
+
+  - name: convert list to map
+    ansible.builtin.debug:
+      msg: "{{ tagsList | items2dict }}"
