--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -13,8 +13,7 @@
              "value": "ansible"
         },
         {
-              
-              "key": "project"
+              "key": "project",
               "value": "roboshop"
         }
     ]
