--- a/19-filters.yaml
+++ b/19-filters.yaml
@@ -3,6 +3,7 @@
   connection: local
   vars:
     topics: linux, shell, ansible, terraform
+    course: "DevOps with AWS"
     tagsMap:
       name: ansible
       project: roboshop
@@ -42,3 +43,13 @@
   - name: convert YAML to JSON
     ansible.builtin.debug:
       msg: "{{ student_yaml | to_nice_json }}"
+
+  - name: convert to upper case
+    ansible.builtin.debug:
+      msg: "{{ course | upper }}"
+
+  - name: convert to lower case
+    ansible.builtin.debug:
+      msg: "{{ course | lower }}"
+
+  
