--- a/20-error-handling.yaml
+++ b/20-error-handling.yaml
@@ -5,7 +5,7 @@
   tasks:
   - name: check user exist or not
     ansible.builtin.command: id roboshop
-    register: users_output
+    register: user_output
     ignore_errors: true
 
   - name: print the output
